--- a/assets/news/_ss-news-1.scss
+++ b/assets/news/_ss-news-1.scss
@@ -6,7 +6,6 @@
   .wrapper-tite {
   }
   .section-news-1 {
-    padding-top: 25px;
     @include tablet {
       padding-top: 30px;
     }
