--- a/assets/news/_ss-news-hot.scss
+++ b/assets/news/_ss-news-hot.scss
@@ -1,5 +1,4 @@
 #section-main-news {
-  padding-top: 25px;
   @include tablet {
     padding-top: 36px;
   }
